2001-07-17  Yuuichi Teranishi  <teranisi@gohome.org>

	* ELSERV-MK, ELSERV-ELS, ELSERV-CFG, Makefile: New files.

	* web-custom.el (toplevel): Require mcharset.
	(web-custom-option-body): Use elserv-replace-in-string.

	* es-mhc.el (elserv-mhc/path, elserv-mhc/icon-image-alist): Moved
	definition.
	(elserv-mhc-article-function): Added local binding `charset'.

	* elserv.el (elserv-daemon-name): Setup default for XEmacs package.
	(elserv-icon-path): Set default value.
	(elserv-service-directory): Set argument `result'.
	(elserv-replace-in-string): New function.

	* elserv-autoindex.el (toplevel): Require elserv.
	(elserv-autoindex): Added argument `result'.

2001-07-17  OHASHI Akira  <bg66@koka-in.org>

        * elserv-autoindex.el (elserv-autoindex): Fix regexp.
        (elserv-autoindex-get-icon): Fix directory handling.

2001-07-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* es-wiki.el (elserv-wiki-search-page): Rewrite for latest emacs-wiki.
	(elsesrv-wiki-compilation-finish-function): Removed.

	* elserv.el (elserv-service-function): Redirect "" to "/".

	* es-monitor.el: Removed "(require 'mcs-20)".

2001-07-16  OHASHI Akira  <bg66@koka-in.org>

        * elserv-autoindex.el (elserv-autoindex-ignore-list): Change list
        contents to regexp.
        (elserv-autoindex): Follow changes above.
        (make-match-function): Abolish.
        (elserv-autoindex-get-icon): Implement `make-match-function'.

        * elserv-autoindex.el (elserv-autoindex): Simplify parent directory
        handlings.
        (elserv-autoindex-get-attr): Ditto.

        * es-monitor.el (toplevel): Require `mcharset' and `mcs-20'.

2001-07-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* es-monitor.el: New file.

	* elserv.el (elserv-publish): Added description as first argument.
	(elserv-execute-service-maybe): Renamed from
	elserv-call-service-function-maybe.
	(elserv-execute-service-maybe): Use intern-soft instead of intern.
	(elserv-service-directory): Added argument `doc'.