@@ -1,5 +1,10 @@
 2001-07-17  Yuuichi Teranishi  <teranisi@gohome.org>
 
+	* elserv.el (toplevel): Enclose autoloading elserv-autoindex
+	definition with eval-and-compile.
+
+	* elserv-autoindex.el (elserv-autoindex): Don't use delete-if.
+
 	* ELSERV-MK, ELSERV-ELS, ELSERV-CFG, Makefile: New files.
 
 	* web-custom.el (toplevel): Require mcharset.
